@@ -4,7 +4,7 @@
       "Helmut Wollmersdorfer, <helmut.wollmersdorfer@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.14, Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.133380",
+   "generated_by" : "Dist::Milla version v1.0.4, Dist::Zilla version 5.015, CPAN::Meta::Converter version 2.141170",
    "license" : [
       "perl_5"
    ],
@@ -31,7 +31,6 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Milla" : "v1.0.14",
             "Test::Pod" : "1.41"
          }
       },
@@ -59,10 +58,10 @@
          "web" : "https://github.com/wollmers/Mojolicious-Plugin-ServerInfo"
       }
    },
-   "version" : "0.005",
+   "version" : "0.006",
    "x_contributors" : [
-      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>",
-      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>"
+      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>",
+      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>"
    ]
 }
 
