@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::ServerInfo.
 
 {{$NEXT}}
+       - add kwalitee badge
 
 0.005  2015-03-26 17:59:38 CET
        - update badges
